test/strongIndexUpdate4.slq
// args: --run

def main(){
	xs:=array(2,vector(2,0:ğ”¹));
	xs[0][0]:=H(xs[0][0]);
	(xs[0],xs[1]):=(measure(xs[1]):!â„•^2,xs[0]~[0,1]); // error
	return xs;
}
